2011-12-29  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSLayoutManager.m (-_insertionPointRectFor...,
	-insertionPintRect...): Get the insertion point rectangle right
	for character index 0.

2011-12-29  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextView.m (-resizeSubviewsWithOldSize:): Adjust
	minimum and maximum sizes to ensure that the minimum size is not
	greater than the current size and the maximum size is not smaller
	than the current size.

2011-12-27 German Arias <german@xelalug.org>

	* Resources/Spanish.lproj/Localizable.strings: Update.

2011-12-22 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTextView.m (-setFieldEditor:): Use different values for
	both cases.

2011-12-22  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSSavePanel.m (-browser:createRowsForColumn:inMatrix:):
	Set icon size based on cell's cellSize

2011-12-22 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPrintOperation.m (-_print): Remove unused variable.
	* Source/GSLayoutManager.m (-_generateRunsToCharacter:): Remove
	unused variable.
	* Source/NSToolbar.m (-initWithCoder:): Don't call non-exisiting
	super method.
	* Source/GSNibLoading.m (-nibInstantiate): Add type cast for toolbar.
	* TextConverters/RTF/RTFProducer.m (-_addAttributesString:): Use
	destString instead of dest when writing the NSLinkAttributeName.

2011-12-20  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSBrowserCell.m (-drawInteriorWithFrame:inView:):
	Restore code to draw the background when the cell is highligted

2011-12-18  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSSavePanel.m (-browser:createRowsForColumn:inMatrix:):
	Set file icons on browser cells in the open/save panels.

2011-12-18  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSBrowserCell.m (-drawInteriorWithFrame:inView:):
	When highlighted, use -image if -alternateImage is nil.

2011-12-18  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSTableView.m (-_isCellEditableColumn:row:): Tweak